--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,27 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: #1e1f1e; /* Tailwind neutral-800 */
+  border-radius: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #424240; /* Tailwind yellow-400 */
+  border-radius: 8px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #424240; /* yellow-500 */
+}
+
+/* Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #424240 #1e1f1e;
+}
