--- a/app/globals.css
+++ b/app/globals.css
@@ -13,6 +13,7 @@
 
   --border: hsl(0 0 30);
   --highlight: hsl(0 0 60);
+  --highlight-dark: hsl(0 0 50);
 
   --gradient: linear-gradient(0deg, var(--bg) 95%, var(--bg-light));
   --gradient-hover: linear-gradient(0deg, var(--bg), var(--bg-light));
@@ -38,6 +39,10 @@
   --accent-orange: oklch(0.5 0.15 80);
   --accent-orange-light: oklch(0.6 0.15 80);
 
+  --accent-green-dark: oklch(0.4 0.15 140);
+  --accent-green: oklch(0.5 0.15 140);
+  --accent-green-light: oklch(0.6 0.15 140);
+
   --transparent: hsla(0 0 10 20%);
 
   font-size: 16px;
@@ -54,6 +59,7 @@ body.light {
   --text-inverted: hsl(0 0 95);
 
   --highlight: hsl(0 0 100);
+  --highlight-dark: hsl(0 0 90);
 
   --gradient: linear-gradient(0deg, var(--bg) 95%, var(--bg-light));
   --gradient-hover: linear-gradient(0deg, var(--bg), var(--bg-light));
@@ -244,16 +250,6 @@ a {
   border-radius: 1rem;
   box-shadow: var(--shadow);
   opacity: 0.65;
-}
-
-button {
-  border-radius: 0.25rem;
-  cursor: pointer;
-  color: var(--text-inverted);
-  font-size: 1.15rem;
-  padding: 0.8rem 1.8rem;
-  font-weight: 700;
-  max-width: 400px;
 }
 
 .submit-button {
